Enable native access for all unnamed modules
Reason: To suppress the warning from Netty.
WARNING: java.lang.System::loadLibrary has been
called by io.netty.util.internal.NativeLibraryUtil
in an unnamed module

Future work: Once Netty defines its module name properly,
instead of ALL-UNNAMED, Netty's correct module name can
be used in the jvmArg.

Note: In IntelliJ IDEA, the jvmArg had to be manually
set in the run/debug configuration dialog — didn't
automatically pick up from the built.gradle.kts